tests/vrs/state/parts/memoryfield_02_field_info_wrong_2_expected.txt
error: expected `,`, found `]`
     --> tests/vrs/state/parts/memoryfield_02_field_info_wrong_2.vrs:1:19
      |
    1 |  mem foo [ base, 8 ] {Layout {}}
      |                    ^ help: add `,` here.
